--- a/QQImplDLL/QQOcr/QQOcr/QQOcr.vcxproj
+++ b/QQImplDLL/QQOcr/QQOcr/QQOcr.vcxproj
@@ -112,7 +112,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="..\..\..\..\..\..\note\build\xai.rc" />
+    <ResourceCompile Include="..\..\..\..\..\..\note\build\infai.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
